objects/jiffle__Session__c.object
<CustomObject>
    <description>To store session nomination data</description>
    <fields>
        <fullName>jiffle__Attendee_count__c</fullName>
        <label>Attendee count</label>
        <summaryForeignKey>jiffle__Registration__c.jiffle__Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jiffle__End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Location</label>
        <referenceTo>jiffle__Briefing_Center__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Jifflenow_Event__c</fullName>
        <label>Jifflenow Event</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Nomination_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Nomination UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Registration_Type__c</fullName>
        <label>Registration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Abstract__c</fullName>
        <label>Session Abstract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Name__c</fullName>
        <label>Session Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Status__c</fullName>
        <label>Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jiffle__Session_Time_Zone__c</fullName>
        <label>Session Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Session UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Topic_of_Interest__c</fullName>
        <label>Topic of Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Track_UUID__c</fullName>
        <label>Track UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Track__c</fullName>
        <label>Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Session_Name__c</columns>
        <columns>jiffle__Session_Status__c</columns>
        <columns>jiffle__Start_Date_Time__c</columns>
        <columns>jiffle__End_Date_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>